--- a/build.gradle
+++ b/build.gradle
@@ -63,7 +63,11 @@ def generated = 'src/main/generated'
 // querydsl QClass 파일 생성 위치를 지정
 tasks.withType(JavaCompile) {
 	options.getGeneratedSourceOutputDirectory().set(file(generated))
+	options.compilerArgs << '-parameters'
+
 }
+
+
 // java source set 에 querydsl QClass 위치 추가
 sourceSets {
 	main.java.srcDirs += [ generated ]
